# recipe-website

client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  config.js  index.js
client/src/components/: NavBar.js  RecipeDisplay.js  RequireAuth.js  RichTextEditor.js
client/src/pages/: Browse.js  Create.js  Dashboard.js  Landing.js  Recipe.js
client/src/styles/: index.scss  vars.scss
client/src/styles/components/: Navbar.module.scss  RecipeDisplay.module.scss  RichTextEditor.module.scss
client/src/styles/pages/: Browse.module.scss  Landing.module.scss  Recipe.module.scss
client/src/utils/: db.js  misc.js
server/: .dockerignore  Dockerfile  app.py  config.py  main.py  pyproject.toml
server/database/: models.py
server/routes/: __init__.py  auth.py  recipes.py  users.py
